--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -18,7 +18,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728888.md#1" target="_blank">赵薇零滤镜大特写曝光 网民直呼看傻眼</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728888.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/zhaowei-huangyoulong-150x120.jpg" align ="left"></a>凭在《还珠格格》中饰演“小燕子”走红的大陆女星赵薇，日前在大陆综艺节目《演员请就位》中亮相时，被拍到零滤镜下尽显疲态的大特写，让网民直呼看傻眼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728758.md#1" target="_blank">弹劾总统民主党双重标准 麦康奈尔否决</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728758.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-915506404-600x400-150x120.jpg" align ="left"></a>美国国会参议院多数党领袖米奇·麦康奈尔（Mitch McConnell）周二（12月17日）拒绝少数党领袖查尔斯·舒默（Charles Schumer）的初步弹劾审讯提议，坚持对总统川普（特朗普）要沿用前总统克林顿同样的弹劾流程。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728680.md#1" target="_blank">湖南操场埋尸案开庭 受害人被迷晕后遭锤杀</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11728680.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e14fb80f1e4ef5_ttl7dayhRF_1___-150x120.jpg" align ="left"></a>湖南怀化市新晃县一中教师邓世平遇害16年11个月后，于12月17日开庭。嫌疑人杜少平及其同伙罗光忠采用下迷药、套塑料袋、用胶带捆绑、锤击头部等手段，将邓世平残忍杀害。受害人家属说：等这天等太久了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:47 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11727018.md#1" target="_blank">南加州华女经营月子中心获刑 出狱即将被遣返</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/17/n11727018.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1503032124172700-600x400-150x120.jpg" align ="left"></a>周一（12月16日），南加一名曾经经营月子中心的华裔妇女被判处10个月监禁，成为在2015年联邦“扫荡”南加月子中心后第一个获刑者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/21/n11736910.md#1" target="_blank">工作人员在陕西兵马俑坑内洒水引网友热议</a><br></h3>近日,大陆网络上流传出多名工作人员在陕西秦始皇兵马俑景区内洒水，许多网友质疑是破坏文物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/20/n11735959.md#1" target="_blank">社交名媛张瀞仁猝逝 刘嘉玲安以轩发文悼念</a><br></h3>活跃于大陆社交圈的名媛张瀞仁，惊传12月20日凌晨在日本北海道猝逝。今年53岁的她，是“台聚集团”的少奶奶，经常出席各种时尚活动，与演艺圈许多明星关系匪浅，就连微博名“上海吴太”也是刘嘉玲帮取名。噩耗传来，刘嘉玲、安以轩等圈内好友纷纷发文悼念。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/20/n11734452.md#1" target="_blank">每日三退声明精选（2019/12/19）</a><br></h3>本人刘清甄，在职高校教师。起初我为了教书育人进入大学传道授业，但在学校中被迫给杀人无数的匪共做宣传，逐渐看清了匪共的本质。今年六月以来，我实在受不了被上级要求抹黑香港民主运动的指示，遂在此宣布退出加入过的少先队、共青团和共产党，与邪恶的匪共彻底划清界限。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11733750.md#1" target="_blank">陆男星拍戏以数字代台词 滑稽表演引热议</a><br></h3>近日，大陆网络流出的一段视频证实：近年大陆演艺圈的确出现了“数字先生”、“数字小姐”不背台词，拍戏时嘴巴念着12345，对白的情绪全交给专业配音演员去处理。这段视频显示，两位演员在对戏时，从头到尾以数字带过，画面非常爆笑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:15 AM							</td></tr>
